# wintertide-calc

./: .gitignore  CMakeLists.txt  LICENCE  README.md  appinfo.h  hint_cast.cpp  hint_cast.h  hint_cast.ui  hint_damage.cpp  hint_damage.h  hint_damage.ui  hint_duration.cpp  hint_duration.h  hint_duration.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  poe_data.cpp  poe_data.h  poe_math.cpp  poe_math.h  resources.qrc  skill_dmg_table.cpp  skill_dmg_table.h  skill_dmg_table.ui  valclip.h
